created hover aesthetics and put in some test questions

--- a/index.html
+++ b/index.html
@@ -12,19 +12,41 @@
         <h1>NW Coding Quiz Challenge!</h1>
     </header>
     <h2 id="word"></h2>
-    <div>
+    <section>
+        <button id="hover">Start Quiz</button>
+    </section>
+    
+    <div class = "container">
         <h2>What is the purpose of a CSS file?</h2>
             <section class = "question-box">
-                <button>A. To ensure that your webpage functions properly on the backend</button>
-                <button>B. To show the content of the webpage in text format</button>
-                <button>C. To make the webpage look "pretty"</button>
-                <button>D. All of the above</button>
+                <button id = "hover">A. To ensure that your webpage functions properly on the backend</button>
+                <button id = "hover">B. To show the content of the webpage in text format</button>
+                <button id = "hover">C. To make the webpage look "pretty"</button>
+                <button id = "hover">D. All of the above</button>
             </section>
     </div>
-    <section>
-        <button id="start">Start Quiz</button>
-    </section>
-    <div class = "stats">
+    <div class = "container">
+        <h2>What is the purpose of a CSS file?</h2>
+            <section class = "question-box">
+                <button id = "hover">A. To ensure that your webpage functions properly on the backend</button>
+                <button id = "hover">B. To show the content of the webpage in text format</button>
+                <button id = "hover">C. To make the webpage look "pretty"</button>
+                <button id = "hover">D. All of the above</button>
+            </section>
+    </div>
+    <div class = "container">
+        <h2>What is the purpose of a CSS file?</h2>
+            <section class = "question-box">
+                <button id = "hover">A. To ensure that your webpage functions properly on the backend</button>
+                <button id = "hover">B. To show the content of the webpage in text format</button>
+                <button id = "hover">C. To make the webpage look "pretty"</button>
+                <button id = "hover">D. All of the above</button>
+            </section>
+    </div>
+    <div id = "next">
+        <button id = "hover">Next Question</button>
+    </div>
+    <div id = "stats">
         Wins: <span  id="wins">0</span> 
         Losses: <span  id="losses">0</span> 
        <span  id="timer">Timer</span> 
