--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
     </header>
     <h2 id="word"></h2>
     <section>
-        <button class="button">Start Quiz</button>
+        <button class="button start">Start Quiz</button>
     </section>
     <div id="questions">
-
+        <p id = "question1"></p>
+        <button id = "option1"></button>
+        <button id = "option2"></button>
+        <button id = "option3"></button>
+        <button id = "option4"></button>
+        </ul>
     </div>
     <div id = "next">
         <button class = "button">Next Question</button>
