--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script> -->
     <title>Document</title>
 </head>
 <body>
@@ -19,14 +19,12 @@
     </section>
     <div id="questions">
         <p id = "question1"></p>
-        <button id = "option1"></button>
-        <button id = "option2"></button>
-        <button id = "option3"></button>
-        <button id = "option4"></button>
-        </ul>
-    </div>
-    <div id = "next">
-        <button class = "button">Next Question</button>
+        <div class = "hidden">
+        <button class="button" id = "option1"></button>
+        <button class="button" id = "option2"></button>
+        <button class="button" id = "option3"></button>
+        <button class="button" id = "option4"></button>
+        </div>
     </div>
     <div id = "highscore">
         Wins: <span  id="wins">0</span> 
