--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>Ready to test your knowledge of all things HTML, CSS, and JavaScript? Press the "Start Quiz" button for code related questions. You'll be able to track your high scores and compare your attempts once you've finished the challenge!</p>
         <button type="button" id="start-button" class="start-button"><a href="#"></a><strong></a>Start Quiz!</strong></button>
     </div>
-    <div id="question-screen">
+    <div id="question-page">
         <h2 id="title">Test</h2>
         <div id="options"></div>
     </div>
@@ -21,6 +21,12 @@
         <h2>How'd you do?</h2>
         <input id="user-initials" type="text" placeholder="Please enter your initials">
         <button id="initials-button">Enter your initials</button>
+    </div>
+    <section type="scores" class="scores" id="scores">
+    </section>
+    <div id="countdown-timer">
+        <section id="timer" class="timer">Countdown Timer</section>
+        <script src="./assets/script.js"></script>
     </div>
     <script src = "./assets/javascript/script.js"></script>
 </body>
