started functions for the quiz start and timer and also fixed a syntax issue within the setAttributes on line 28

--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
         <button type="button" id="start-button" class="start-button"><a href="#"></a><strong></a>Start Quiz!</strong></button>
     </div>
     <div id="question-page">
-        <h2 id="title">Test</h2>
         <div id="options"></div>
     </div>
     <div id="quiz-end">
-        <h2>How'd you do?</h2>
+        <h2>Game Over! Thanks for playing!</h2>
         <input id="user-initials" type="text" placeholder="Please enter your initials">
-        <button id="initials-button">Enter your initials</button>
+        <button id="initials-button">Enter</button>
     </div>
     <section type="scores" class="scores" id="scores">
     </section>
     <div id="countdown-timer">
-        <section id="timer" class="timer">Countdown Timer</section>
+        <section id="timer" class="timer">Timer Countdown</section>
         <script src="./assets/script.js"></script>
     </div>
     <script src = "./assets/javascript/script.js"></script>
