--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="quiz-start">
-        <h1 a="intro">NW Coding Challenge</h1>
+        <h1 a="problem">NW Coding Challenge</h1>
         <p>Ready to test your knowledge of all things HTML, CSS, and JavaScript? Press the "Start Quiz" button for code related questions. You'll be able to track your high scores and compare your attempts once you've finished the challenge!</p>
         <button type="button" id="start-button" class="start-button"><a href="#"></a><strong></a>Start Quiz!</strong></button>
     </div>
