--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>NW Coding Quiz Challenge</title>
 </head>
 <body>
-    <div id="quiz-start">
-        <h1 a="problem">NW Coding Challenge</h1>
+    <div id="start-questions">
+        <h1 a="problem">NW Coding Quiz Challenge</h1>
         <p>Ready to test your knowledge of all things HTML, CSS, and JavaScript? Press the "Start Quiz" button for code related questions. You'll be able to track your high scores and compare your attempts once you've finished the challenge!</p>
         <button type="button" id="start-button" class="start-button"><a href="#"></a><strong></a>Start Quiz!</strong></button>
     </div>
-    <div id="question-page">
+    <div id="options-page">
         <div id="options"></div>
     </div>
-    <div id="quiz-end">
+    <div id="end-questions">
         <h2>Game Over! Thanks for playing!</h2>
         <input id="user-initials" type="text" placeholder="Please enter your initials">
         <button id="initials-button">Enter</button>
