worked through multiple issues with tutor on connecting functions and finding syntax errors

--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     <title>NW Coding Quiz Challenge</title>
 </head>
 <body>
-    <div id="start-questions">
-        <h1 a="problem">NW Coding Quiz Challenge</h1>
+    <div id="homepage">
+        <h1 id ="titlescreen">NW Coding Quiz Challenge</h1>
         <p>Ready to test your knowledge of all things HTML, CSS, and JavaScript? Press the "Start Quiz" button for code related questions. You'll be able to track your high scores and compare your attempts once you've finished the challenge!</p>
         <button type="button" id="start-button" class="start-button"><a href="#"></a><strong></a>Start Quiz!</strong></button>
+    </div>
+    <div id="start-questions">
+        <h1>NW Coding Quiz Challenge</h1>
+        <p id ="problem">Ready to test your knowledge of all things HTML, CSS, and JavaScript? Press the "Start Quiz" button for code related questions. You'll be able to track your high scores and compare your attempts once you've finished the challenge!</p>
+        <div id="countdown-timer">
+            <section id="timer" class="timer">Timer Countdown</section>
+        </div>
     </div>
     <div id="options-page">
         <div id="options"></div>
@@ -23,9 +30,6 @@
     </div>
     <section type="score" class="score" id="score">
     </section>
-    <div id="countdown-timer">
-        <section id="timer" class="timer">Timer Countdown</section>
-    </div>
     <script src = "./assets/javascript/script.js"></script>
 </body>
 </html>
